Support Java 8 in the core library