@@ -1,6 +1,6 @@
 package net.pixaurora.kit_tunes.impl.scrobble;
 
-import java.util.List;
+import java.util.Arrays;
 
 import net.pixaurora.kit_tunes.impl.config.dispatch.DispatchGroup;
 import net.pixaurora.kit_tunes.impl.config.dispatch.SpecifiesType;
@@ -8,7 +8,7 @@ import net.pixaurora.kit_tunes.impl.error.KitTunesException;
 
 public interface Scrobbler extends SimpleScrobbler, SpecifiesType<Scrobbler> {
     public static final DispatchGroup<Scrobbler, ScrobblerType<? extends Scrobbler>> TYPES = new DispatchGroup<>(
-            "scrobbler", List.of(LastFMScrobbler.TYPE));
+            "scrobbler", Arrays.asList(LastFMScrobbler.TYPE));
 
     public static final int SETUP_PORT = 19686;
 
